<resources>
    <string name="app_name">Space Quiz App</string>
    <string name="plus_one">+1</string>
    <string name="hello_user">გამარჯობა, %s </string>
    <string name="hint_text">შეიყვანეთ სახელი</string>
    <string name="welcome_text">ჩემი პირველი ქვიზი</string>
    <string name="details">დეტალურად</string>
    <string name="choose_subject">აირჩიე საგანი</string>
    <string name="GPA">GPA -</string>
    <string name="start_quiz_button">ქვიზის დაწყება</string>
    <style name="current_score">მიმდინარე ქულა</style>
    <string name="next_button">შემდეგი</string>
    <string name="finish_button">დასრულება</string>
    <string name="close_button">დახურვა</string>
    <string name="congratulations">გილოცავ!</string>
    <string name="your_score_is">შენ დააგროვე %d ქულა</string>
    <string name="accumulated_score">დაგროვილი ქულები</string>
    <string name="there_is_no_scores">🧐\nსამწუხაროდ,\nქულები ჯერ არ გაქვს\nდაგროვილი</string>
    <string name="do_you_want_to_log_out">ნამდვილად გსურს გასვლა?</string>
    <string name="do_you_want_to_cancel_quiz">ნამდვილად გსურს ქვიზის შეწყვეტა?</string>
    <string name="yes">კი</string>
    <string name="no">არა</string>
    <string name="default_gpa">0.0</string>
    <string name="current_score">მიმდინარე ქულა: %d</string>
    <string name="congrats_icon"> 🎉 </string>
    <string name="username_invalid_length_long">სახელის ზომა უნდა არ უნდა აღემატებოდეს 20 სიმბოლოს</string>
    <string name="username_invalid_length_short">სახელის ზომა უნდა არ უნდა იყოს 2 სიმბოლოზე ნაკლები</string>
    <string name="username_invalid_characters">არავალიდური სახელი</string>
    <string name="login_success">მომხამრებელი წარმატებით შევიდა სისტემაში</string>
    <string name="low_score_emoji">😭</string>
    <string name="congrats_emoji">🥳</string>


</resources>