<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.space.quiz_app.presentation.quiz_login_screen.QuizLoginFragment">

    <com.space.quiz_app.presentation.custom_view.custom_view.QuizLoginBackgroundView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/bigMyriadGeo_Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80_dp"
        android:layout_marginBottom="@dimen/dimen_15_dp"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/iconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_180_dp"
        android:src="@drawable/ic_man"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEditText"
        style="@style/smallMyriadGeo_Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80_dp"
        android:layout_marginHorizontal="@dimen/dimen_60_dp"
        android:layout_marginBottom="@dimen/dimen_30_dp"
        android:hint="@string/hint_text"
        android:minHeight="@dimen/dimen_50_dp"
        android:paddingHorizontal="@dimen/dimen_30_dp"
        android:textAlignment="center"
        android:background="@drawable/shp_message_edittext"
        app:layout_constraintTop_toBottomOf="@id/backgroundView"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorTextView"
        style="@style/smallMyriadGeo_Error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_marginHorizontal="@dimen/dimen_60_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        style="@style/smallMyriadGeo_Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_114_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:backgroundTint="@color/yellow_primary"
        app:cornerRadius="@dimen/dimen_8_dp"
        android:text="@string/start_quiz_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/errorTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>